<resources>
    <string name="app_name">My Document Organizer</string>
    <string name="your_web_client_id">
        746334394037-4mglao85ljvuv5h14pjvt53t9v98r3pm.apps.googleusercontent.com
    </string>
    <string name="auth_title">Authentation Required!</string>
    <string name="auth_subtitle">Important authentication</string>
    <string name="auth_description">please authenticate to be able to access data and open the app</string>
    <string name="error_msg_auth_error">Error!</string>
    <string name="error_msg_auth_failed">Failed!!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="empty">description</string>

    <string name="try_again">Try Again</string>
    <string name="sorry_your_account_creation_is_not_successful">Sorry, your account creation is not successful.</string>
    <string name="failed">FAILED</string>
    <string name="forgot">Forgot?</string>
    <string name="email">Email</string>
    <string name="enter_the_code_we_ve_send_on_your_nemail_porosh_technobd_com">Enter the code we\'ve send on your \nemail porosh@technobd.com</string>
    <string name="verify_your_email">Verify your Email</string>
    <string name="don_t_receive_the_code">Don\'t receive the code?</string>
    <string name="resend">Resend</string>
    <string name="success">SUCCESS</string>
    <string name="congratulations_your_account_has_been_successfully_created">Congratulations, your account has been successfully created.</string>
    <string name="country">Country</string>
    <string name="already_registered">Already Registered?</string>
    <string name="login_here">Login Here</string>
    <string name="register_to_ndocument_organizer">Register to \nDocument Organizer</string>
    <string name="full_name">Full Name</string>
    <string name="retype_password">Retype Password</string>
    <string name="password">Password</string>
    <string name="set_password">Set Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="enter_the_email_associated_with_your_account_and_we_ll_send_an_email_with_a_4_digit_confirmation_code">Enter the email associated with your account and we\'ll send an email with a 4 digit confirmation code.</string>
    <string name="your_email">Your email</string>
    <string name="send_code">SEND CODE</string>
    <string name="login_to_document_organizer">Login to\nDocument Organizer</string>
    <string name="or">Or</string>
    <string name="login">LOGIN</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="new_to_document_organizer">New to Document Organizer?</string>
    <string name="register_here">Register Here</string>
    <string name="unlimited_access_to_all_features">Unlimited Access to All Features</string>
    <string name="my_profile">My Profile</string>
    <string name="create_label">Create Label</string>
    <string name="upcoming_reminders">Upcoming Reminders</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log Out</string>
    <string name="upgrade">Upgrade</string>
    <string name="check_your_email">Check your email</string>
    <string name="we_ve_sent_you_a_4_digit_confirmation_code_to_your_email">We\'ve sent you a 4 digit confirmation code to your email.</string>
    <string name="create_new_password">Create new password</string>
    <string name="reset_password_u">RESET PASSWORD</string>
    <string name="cancel">Cancel</string>
    <string name="select_country">Select Country</string>
    <string name="search_country">Search country</string>
    <string name="use_your_finger_print_face_id_to_login">Use your Finger Print/Face ID to login.</string>

    <string name="acount">Account</string>
    <string name="google_account">Google account</string>
    <string name="media_and_storage">Media and storage</string>
    <string name="sync">Sync</string>
    <string name="biometric_or_face_id">Biometric/Face ID</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="notification">Notification</string>
    <string name="privacy">Privacy</string>
    <string name="about">About</string>
    <string name="general">General</string>
    <string name="help">Help</string>
    <string name="sign_out">Sign Out</string>
    <string name="my_subscription">My Subscription</string>
    <string name="change_password">Change Password</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="continue_">Continue</string>
    <string name="submit">SUBMIT</string>
    <string name="title_activity_splashscreen">SplashscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="developed_by">Developed by</string>
    <string name="add_your_first_document">Add Your First Document</string>
    <string name="you_don_t_have_any_files_yet_click_at_the_bottom_of_the_screen_and_add_some">you don\'t have any files yet,\nclick \'+\' at the bottom of the screen\nand add some</string>
    <string name="learn_how">Learn How</string>
    <string name="camera">camera</string>
    <string name="text_only">Text Only</string>
    <string name="gallery">Gallery</string>
    <string name="file_manager">File Manager</string>
    <string name="select_document_type">Select Document Type</string>
    <string name="select_a_document_type">Select A Document Type</string>
    <string name="add_new">Add new</string>
    <string name="search_document_type">Search document type...</string>
    <string name="are_you_sure_nyou_want_to_discard_this_document">Are you sure\nyou want to discard this document?</string>
    <string name="yes_discard">Yes, Discard</string>
    <string name="no_keep">No, Keep</string>
    <string name="create_new_label">Create New Label</string>
    <string name="individual">Individual</string>
    <string name="create">Create</string>
    <string name="text_field">Text Field</string>
    <string name="new_password">New Password</string>
    <string name="retype_new_password">Retype New Password</string>
    <string name="old_password">Old Password</string>
    <string name="drag_near_corners_to_adjust">Drag near corners to adjust.</string>
    <string name="retake">Retake</string>
    <string name="keep">Keep</string>
    <string name="profile">Profile</string>
    <string name="done">Done</string>
    <string name="all_labels">All Labels</string>
    <string name="search_labels">Search labels</string>
    <string name="alphabetical">Alphabetical</string>
    <string name="create_date">Create Date</string>
    <string name="update_date">Update Date</string>
    <string name="label">Label</string>
    <string name="reminder">Reminder</string>
    <string name="document_name">Document Name..</string>
    <string name="discard">Discard</string>
    <string name="next">Next</string>
    <string name="other_information">Other Information</string>
    <string name="back">Back</string>
    <string name="save">Save</string>
    <string name="document_description">Document Description</string>
    <string name="type_your_description_here">Type your description here...</string>
    <string name="name">Name</string>
    <string name="select_options">Select Options</string>
    <string name="option">Option</string>
    <string name="add_field">Add Field</string>
    <string name="document_type_field">Document Type Field</string>

</resources>