<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="@dimen/_20dp"
    app:cardCornerRadius="@dimen/_20dp"
    app:cardElevation="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ivCloseIcon"
            android:layout_width="@dimen/_35dp"
            android:layout_height="@dimen/_35dp"
            android:layout_margin="@dimen/_5dp"
            android:padding="@dimen/_5dp"
            android:src="@drawable/ic_close"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="@dimen/_20dp"
            android:text="@string/set_password"
            android:textColor="@color/text_color"
            android:textSize="@dimen/_18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivCloseIcon" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20dp"
            android:layout_marginTop="@dimen/_20dp"
            android:hint="@string/password"
            android:textColorHint="@color/hint_text_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitle"
            app:passwordToggleDrawable="@drawable/password_toggle_on_off"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_up_round_corner"
                android:inputType="textPassword"
                android:lines="1"
                android:maxLines="1"
                android:textCursorDrawable="@drawable/edit_text_curso_color"
                android:textSize="@dimen/_16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilRetypePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20dp"
            android:layout_marginTop="@dimen/_5dp"
            android:hint="@string/retype_password"
            android:textColorHint="@color/hint_text_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilPassword"
            app:passwordToggleDrawable="@drawable/password_toggle_on_off"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietRetypePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_bottom_round_corner"
                android:inputType="textPassword"
                android:lines="1"
                android:maxLines="1"
                android:textCursorDrawable="@drawable/edit_text_curso_color"
                android:textSize="@dimen/_16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvContinueBtn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50dp"
            android:layout_marginHorizontal="@dimen/_20dp"
            android:layout_marginVertical="@dimen/_20dp"
            android:background="@drawable/corner_radius_5"
            android:gravity="center"
            android:text="@string/continue_"
            android:textColor="@color/white"
            android:textSize="@dimen/_16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilRetypePassword" />

        <TextView
            android:id="@+id/tvAlreadyReg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20dp"
            android:layout_marginTop="@dimen/_20dp"
            android:text="@string/already_registered"
            android:textColor="@color/text_color"
            android:textSize="@dimen/_16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvContinueBtn" />

        <TextView
            android:id="@+id/tvLoginHere"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20dp"
            android:layout_marginBottom="@dimen/_20dp"
            android:text="@string/login_here"
            android:textColor="@color/resend_text_color"
            android:textSize="@dimen/_16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvAlreadyReg" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>