<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="@dimen/_20dp"
    app:cardCornerRadius="@dimen/_20dp"
    app:cardElevation="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ivCloseIcon"
            android:layout_width="@dimen/_35dp"
            android:layout_height="@dimen/_35dp"
            android:layout_margin="@dimen/_5dp"
            android:padding="@dimen/_5dp"
            android:src="@drawable/ic_close"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="@dimen/_20dp"
            android:text="@string/verify_your_email"
            android:textColor="@color/text_color"
            android:textSize="@dimen/_18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivCloseIcon" />

        <TextView
            android:id="@+id/tvSubTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginHorizontal="@dimen/_20dp"
            android:layout_marginVertical="@dimen/_10dp"
            android:text="@string/enter_the_code_we_ve_send_on_your_nemail_porosh_technobd_com"
            android:textColor="@color/hint_text_color"
            android:textSize="@dimen/_16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

        <EditText
            android:id="@+id/etVerificationCode"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50dp"
            android:layout_marginHorizontal="@dimen/_20dp"
            android:layout_marginVertical="@dimen/_10dp"
            android:background="@drawable/edit_text_round_corner_5"
            android:gravity="center"
            android:hint="4 8 9 5 2 6"
            android:inputType="numberDecimal"
            android:lines="1"
            android:maxLines="1"
            android:maxLength="6"
            android:textColor="@color/text_color"
            android:textSize="@dimen/_18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSubTitle" />

        <TextView
            android:id="@+id/tvSubmitBtn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50dp"
            android:layout_marginHorizontal="@dimen/_20dp"
            android:layout_marginTop="@dimen/_10dp"
            android:background="@drawable/corner_radius_5"
            android:gravity="center"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="@dimen/_16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etVerificationCode" />

        <TextView
            android:id="@+id/tvNewReg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20dp"
            android:layout_marginTop="@dimen/_20dp"
            android:text="@string/don_t_receive_the_code"
            android:textColor="@color/text_color"
            android:textSize="@dimen/_16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvSubmitBtn" />

        <TextView
            android:id="@+id/tvReSendBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20dp"
            android:layout_marginBottom="@dimen/_20dp"
            android:text="@string/resend"
            android:textColor="@color/resend_text_color"
            android:textSize="@dimen/_16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvNewReg" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>