<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="@dimen/_20dp"
    app:cardCornerRadius="@dimen/_20dp"
    app:cardElevation="0dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ivCloseIcon"
            android:layout_width="@dimen/_35dp"
            android:layout_height="@dimen/_35dp"
            android:layout_margin="@dimen/_5dp"
            android:padding="@dimen/_5dp"
            android:src="@drawable/ic_close"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="@dimen/_20dp"
            android:text="@string/reset_password"
            android:textColor="@color/text_color"
            android:textSize="@dimen/_18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivCloseIcon" />

        <TextView
            android:id="@+id/tvSubTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginHorizontal="@dimen/_20dp"
            android:layout_marginTop="@dimen/_10dp"
            android:text="@string/enter_the_email_associated_with_your_account_and_we_ll_send_an_email_with_a_4_digit_confirmation_code"
            android:textColor="@color/hint_text_color"
            android:textSize="@dimen/_16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

        <EditText
            android:id="@+id/etEmailForResetPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50dp"
            android:layout_marginHorizontal="@dimen/_20dp"
            android:layout_marginTop="@dimen/_10dp"
            android:background="@drawable/edit_text_round_corner_5"
            android:hint="@string/your_email"
            android:inputType="textEmailAddress"
            android:lines="1"
            android:maxLines="1"
            android:textColor="@color/text_color"
            android:textSize="@dimen/_16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSubTitle" />

        <TextView
            android:id="@+id/tvSendCodeBtn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50dp"
            android:layout_centerHorizontal="true"
            android:layout_marginHorizontal="@dimen/_20dp"
            android:layout_marginTop="@dimen/_10dp"
            android:layout_marginBottom="@dimen/_20dp"
            android:background="@drawable/corner_radius_5"
            android:gravity="center"
            android:text="@string/send_code"
            android:textColor="@color/white"
            android:textSize="@dimen/_16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/etEmailForResetPassword"
            app:layout_constraintStart_toStartOf="@id/etEmailForResetPassword"
            app:layout_constraintTop_toBottomOf="@+id/etEmailForResetPassword" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</com.google.android.material.card.MaterialCardView>